--- a/package.json
+++ b/package.json
@@ -2,15 +2,31 @@
   "name": "lean-test",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
+    "@google-cloud/firestore": "^0.14.0",
+    "@google-cloud/storage": "^1.6.0",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.5.1",
+    "express": "^4.16.3",
+    "express-validator": "^5.2.0",
+    "firebase-admin": "^5.12.1",
+    "multer": "^1.3.0",
+    "nodemon": "^1.17.4",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "sharp": "^0.20.2",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server.js",
+    "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
